[package]
name = "pmtiler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A CLI for creating PMTiles archives from raster tiles and GDAL-readable raster sources."
readme = "README.md"
repository = "https://github.com/guevarez30/pmtiler"
homepage = "https://github.com/guevarez30/pmtiler"
license = "MIT"
keywords = ["pmtiles", "geotiff", "gdal", "raster", "tiles"]
categories = ["command-line-utilities", "science::geo"]

[dependencies]
gdal = "0.19.0"
gdal-sys = "0.12.0"
